<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="28dp"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".MainActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/move_activity"
        android:id="@+id/btn_move_activity"
        android:layout_marginBottom="16dp"
        android:padding="2dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/move_with_data"
        android:layout_marginBottom="16dp"
        android:id="@+id/btn_move_activity_data"
        android:padding="2dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dial_number"
        android:layout_marginBottom="16dp"
        android:id="@+id/btn_dial_number"
        android:padding="2dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chat_wa"
        android:layout_marginBottom="16dp"
        android:id="@+id/btn_chat_wa"
        android:padding="2dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bc_wa"
        android:layout_marginBottom="16dp"
        android:id="@+id/btn_bc_wa"
        android:padding="2dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/map"
        android:layout_marginBottom="16dp"
        android:id="@+id/btn_map"
        android:padding="2dp"/>

</LinearLayout>